# MatchCake-Opt

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  pyproject.toml
.github/workflows/: build_dist.yml  docs.yml  tests.yml
docs/: .buildinfo  genindex.html  html_files_list.txt  index.html  matchcake_opt.datamodules.html  matchcake_opt.datasets.html  matchcake_opt.html  matchcake_opt.modules.html  matchcake_opt.tr_pipeline.html  matchcake_opt.utils.html  modules.html  objects.inv  py-modindex.html  readme.html  search.html  searchindex.js
docs/sources/: matchcake_opt.datamodules.rst.txt  matchcake_opt.datasets.rst.txt  matchcake_opt.modules.rst.txt  matchcake_opt.rst.txt  matchcake_opt.tr_pipeline.rst.txt  matchcake_opt.utils.rst.txt  modules.rst.txt
notebooks/: automl_pipeline_tutorial.ipynb  datasets_normalisation.ipynb  ligthning_pipeline_tutorial.ipynb  nif_deep_learning.ipynb  nif_deep_learning.py
sphinx/source/: conf.py  index.rst  modules.rst
src/bolightningpipeline/: __init__.py
src/bolightningpipeline/datasets/: __init__.py  base_dataset.py  cifar10_dataset.py  datamodule.py  dataset_handler.py  digits2d.py  mnist_dataset.py  pathmnist_dataset.py
src/bolightningpipeline/modules/: base_model.py  classification_model.py
src/bolightningpipeline/tr_pipeline/: automl_pipeline.py  lightning_pipeline.py
src/bolightningpipeline/utils/: metadata_file.py  output_folder.py
src/matchcake_opt/: __init__.py
src/matchcake_opt/datamodules/: __init__.py  datamodule.py  maxcut_datamodule.py
src/matchcake_opt/datasets/: __init__.py  base_dataset.py  cifar10_dataset.py  datamodule.py  digits2d.py  maxcut_dataset.py  mnist_dataset.py  pathmnist_dataset.py  retinamnist_dataset.py
src/matchcake_opt/modules/: base_model.py  classification_model.py  maxcut_model.py
src/matchcake_opt/tr_pipeline/: automl_pipeline.py  lightning_pipeline.py
src/matchcake_opt/utils/: __init__.py  metadata_file.py  model_checkpoint.py  output_folder.py  progress_bar.py
tests/: test_dummy.py  test_init.py
tests/test_datamodules/: test_datamodule.py  test_maxcut_datamodule.py
tests/test_datasets/: test_base_dataset.py  test_cifar10_dataset.py  test_datamodule.py  test_digits2d_dataset.py  test_maxcut_dataset.py  test_mnist_dataset.py  test_pathmnist_dataset.py  test_retinamnist_dataset.py
tests/test_modules/: test_base_model.py  test_classification_model.py  test_maxcut_model.py
tests/test_tr_pipeline/: test_automl_pipeline.py  test_lightning_pipeline.py
