[project]
name = "python_template"
version = "0.0.1"
dynamic = ["readme"]
description = ""
authors = [{name = "Jeremie Gince", email = "gincejeremie@gmail.com"},]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
requires-python = ">=3.10,<4"
dependencies = [
    "numpy (>=1.23,<3.0.0)",
    "setuptools>=65.5.1",
    "pythonbasictools>=0.0.3",
    "psutil>=5.9.6",
    "importlib-metadata (>=8.7.0,<9.0.0)"
]
license={file="LICENSE"}


[build-system]
requires = [
    "setuptools",
    "wheel",
    "pythonbasictools",
    "numpy",
    "psutil",
]
build-backend = "setuptools.build_meta"


[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}


[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.poetry]
package-mode = true
packages = [{include = "python_template", from="src"}]


[tool.poetry.group.dev.dependencies]
pytest-cov = "^6.1.1"
pytest-json-report = "^1.5.0"
pytest = "^8.3.5"
docutils = ">=0.18.1,<0.20"
mypy = "^1.15.0"
black = "^25.1.0"
nbmake = "^1.5.5"
wheel = "^0.45.1"
build = "^1.2.2.post1"
twine = "^6.1.0"
pytest-xdist = "^3.7.0"
isort = "^6.0.1"


[tool.poetry.group.docs.dependencies]
sphinx = ">=6.2.1,<6.3.0"
docutils = ">=0.18.1,<0.20"
sphinx-rtd-theme = "^3.0.2"
sphinxcontrib-bibtex = ">=2.5.0,<2.6.0"
sphinx-theme = "^1.0"
groundwork-sphinx-theme = "^1.1.1"
karma-sphinx-theme = "^0.0.8"
sphinx-mdinclude = "^0.6.2"

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]

[tool.coverage.report]
exclude_also = [
    'def __repr__',
    'if self.debug:',
    'if settings.DEBUG',
    'raise AssertionError',
    'raise NotImplementedError',
    'if __name__ == .__main__.:',
    'if TYPE_CHECKING:',
    '@(abc\.)?abstractmethod',
]

[[tool.mypy.overrides]]
module = [
    "pythonbasictools",
]
ignore_missing_imports = true

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
