[project]
name = "MatchCake-Opt"
version = "0.0.3"
description = ""
authors = [{ name = "Jérémie Gince", email = "gincejeremie@gmail.com" }]
requires-python = ">=3.10,<3.13"
license = { file = "LICENSE" }
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy (>=1.23,<3.0.0)",
    "setuptools (>=65.5.1,<=80.9.0)",
    "pythonbasictools>=0.0.3",
    "psutil>=5.9.6",
    "importlib-metadata (>=8.7.0,<9.0.0)",
    "torch (>=2.6.0,<3.0.0)",
    "torchvision (>=0.21.0)",
    "torchaudio (>=2.6.0,<3.0.0)",
    "lightning (>=2.5.2,<3.0.0)",
    "tensorboardx (>=2.6.4,<3.0.0)",
    "tensorboard (>=2.19.0,<3.0.0)",
    "ax-platform[mysql] (>=1.0.0,<2.0.0)",
    "torcheval (>=0.0.7,<0.0.8)",
    "matchcake>=0.1.2",
    "autoray (<=0.7.2)",
    "medmnist (>=3.0.2,<4.0.0)",
    "torch-geometric>=2.7.0",
]
dynamic = ["readme"]

[dependency-groups]
dev = [
    "pytest-cov>=6.1.1,<7",
    "pytest-json-report>=1.5.0,<2",
    "pytest>=8.3.5,<9",
    "docutils>=0.18.1,<0.20",
    "mypy>=1.15.0,<2",
    "black>=25.1.0,<26",
    "nbmake>=1.5.5,<2",
    "wheel>=0.45.1,<0.46",
    "build>=1.2.2.post1,<2",
    "twine>=6.1.0,<7",
    "pytest-xdist>=3.7.0,<4",
    "isort>=6.0.1,<7",
    "types-networkx>=3.5.0.20251001",
    "pip>=25.3",
    "jupyter>=1.1.1",
    "notebook>=7.5.0",
]
docs = [
    "sphinx>=6.2.1,<6.3.0",
    "docutils>=0.18.1,<0.20",
    "sphinx-rtd-theme>=3.0.2,<4",
    "sphinxcontrib-bibtex>=2.5.0,<2.6.0",
    "sphinx-theme~=1.0",
    "groundwork-sphinx-theme>=1.1.1,<2",
    "karma-sphinx-theme>=0.0.8,<0.0.9",
    "sphinx-mdinclude>=0.6.2,<0.7",
]

[build-system]
requires = [
    "setuptools",
    "wheel",
    "pythonbasictools",
    "numpy",
    "psutil",
]
build-backend = "setuptools.build_meta"

[tool.uv]
package = true
default-groups = [
    "dev",
    "docs",
]
conflicts = [
  [
    { extra = "cpu" },
    { extra = "cu128" },
    { extra = "cu130" },
  ],
]

[project.optional-dependencies]
cpu = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
]
cu128 = [
  "torch>=2.7.0",
  "torchvision>=0.22.0",
]
cu130 = [
  "torch>=2.7.0",
  "torchvision>=0.23.0",
]

[tool.uv.sources]
torch = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
  { index = "pytorch-cu130", extra = "cu130" },
]
torchvision = [
  { index = "pytorch-cpu", extra = "cpu" },
  { index = "pytorch-cu128", extra = "cu128" },
  { index = "pytorch-cu130", extra = "cu130" },
]

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"
explicit = true

[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[tool.setuptools.dynamic]
readme = {file = "README.md", content-type = "text/markdown"}

[tool.hatch.build.targets.sdist]
include = ["src/matchcake_opt"]

[tool.hatch.build.targets.wheel]
include = ["src/matchcake_opt"]

[tool.hatch.build.targets.wheel.sources]
"src/matchcake_opt" = "matchcake_opt"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = [
  ".", "src",
]

[tool.coverage.report]
exclude_also = [
    'def __repr__',
    'if self.debug:',
    'if settings.DEBUG',
    'raise AssertionError',
    'raise NotImplementedError',
    'if __name__ == .__main__.:',
    'if TYPE_CHECKING:',
    '@(abc\.)?abstractmethod',
]

[[tool.mypy.overrides]]
module = [
    "pythonbasictools",
    "medmnist",
    "torchvision",
    "torchvision.transforms",
    "torchvision.transforms.v2",
    "torchvision.datasets",
    "sklearn.datasets",
    "sklearn.model_selection",
    "sklearn.preprocessing",
    "sklearn.compose",
    "tqdm",
    "pandas",
    "psutil",
    "matchcake.utils",
    "torch_geometric.data",
    "torch_geometric.utils",
    "matchcake.utils.torch_utils",
    "torch_geometric.loader",
]
ignore_missing_imports = true

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
